@@ -6,12 +6,14 @@ import dev.snowcave.guilds.core.Guild;
 import dev.snowcave.guilds.core.GuildBonus;
 import dev.snowcave.guilds.core.users.User;
 import dev.snowcave.guilds.core.users.permissions.GuildPermission;
+import dev.snowcave.guilds.utils.Chatter;
 import dev.snowcave.guilds.utils.ChunkUtils;
-import io.github.winterbear.WinterCoreUtils.ChatUtils;
+import org.bukkit.Bukkit;
 import org.bukkit.Chunk;
+import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
+import org.jetbrains.annotations.NotNull;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -22,31 +24,33 @@ public class GuildWardChunkCommandHandler extends GuildMemberPermissionBonusComm
 
     @Override
     public void handleWithPermissionAndBonus(Player player, User user, String[] arguments) {
+        Chatter chatter = new Chatter(player);
         Guild guild = user.getGuild();
         Chunk chunk = player.getLocation().getChunk();
         Optional<Guild> chunkOwner = ChunkUtils.getGuild(chunk);
         if(!chunkOwner.isPresent() || !chunkOwner.get().equals(guild)){
-            ChatUtils.send(player, ChatUtils.format("&7This chunk is not part of your guild."));
+            chatter.error("This chunk is not part of your guild.");
         } else {
             Optional<ChunkReference> chunkReference = guild.getChunkRef(chunk);
             if(chunkReference.isPresent()) {
+                String message;
                 if(arguments.length > 1 && arguments[1].equalsIgnoreCase("on")){
                     chunkReference.get().initOrGetChunkMetadata().setWardMobs(true);
-                    String message = "&7This chunks mob ward was set to: " + chunkReference.get().initOrGetChunkMetadata().isWardMobs();
-                    ChatUtils.send(player, ChatUtils.format(message));
+                    message = "This chunks mob ward was set to: " + chunkReference.get().initOrGetChunkMetadata().isWardMobs();
                 } else if (arguments.length > 1 && arguments[1].equalsIgnoreCase("off")) {
                     chunkReference.get().initOrGetChunkMetadata().setWardMobs(false);
-                    String message = "&7This chunks mob ward was set to: " + chunkReference.get().initOrGetChunkMetadata().isWardMobs();
-                    ChatUtils.send(player, ChatUtils.format(message));
+                    message = "This chunks mob ward was set to: " + chunkReference.get().initOrGetChunkMetadata().isWardMobs();
                 } else {
-                    String message = "&7This chunks mob ward is set to: " + chunkReference.get().initOrGetChunkMetadata().isWardMobs();
-                    ChatUtils.send(player, ChatUtils.format(message));
+                    message = "This chunks mob ward is set to: " + chunkReference.get().initOrGetChunkMetadata().isWardMobs();
                 }
-
+                chatter.sendP(message);
             } else {
-                ChatUtils.send(player, ChatUtils.format("&cChunk error. Chunk is part of guild but not referencable. Speak to an administrator."));
+                Bukkit.getLogger().warning("Chunk error. Chunk " + player.getLocation().getChunk() + " is part of guild " + user.getGuild().getGuildName() + " but not referencable.");
+                chatter.error("&cChunk error. Chunk is part of guild but not referencable. Speak to an administrator.");
             }
         }
+
+
     }
 
     @Override
@@ -61,11 +65,20 @@ public class GuildWardChunkCommandHandler extends GuildMemberPermissionBonusComm
 
     @Override
     public List<String> getKeywords() {
-        return Arrays.asList("ward");
+        return List.of("ward");
     }
 
     @Override
-    public String describe() {
+    public @NotNull String describe() {
         return "&b/guild ward <on/off> &8- &7Turns the Monster Ward on or off within the current chunk.";
     }
+
+    @Override
+    public List<String> getTabCompletions(CommandSender sender, String[] args) {
+        if(args.length < 3) {
+            return List.of("on", "off");
+        }
+        return List.of();
+    }
+
 }
