@@ -2,51 +2,51 @@ package dev.snowcave.guilds.commands.invites;
 
 import dev.snowcave.guilds.Guilds;
 import dev.snowcave.guilds.commands.base.GuildMemberPermissionCommandHandler;
-import dev.snowcave.guilds.config.DefaultRoles;
 import dev.snowcave.guilds.core.Guild;
 import dev.snowcave.guilds.core.users.User;
 import dev.snowcave.guilds.core.users.permissions.GuildPermission;
+import dev.snowcave.guilds.utils.Chatter;
 import dev.snowcave.guilds.utils.conversations.Invite;
-import io.github.winterbear.WinterCoreUtils.ChatUtils;
 import org.bukkit.Bukkit;
 import org.bukkit.OfflinePlayer;
 import org.bukkit.entity.Player;
+import org.jetbrains.annotations.NotNull;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
+import java.util.*;
 
 /**
  * Created by WinterBear on 28/12/2020.
  */
 public class GuildInviteCommandHandler extends GuildMemberPermissionCommandHandler {
 
-    public static List<Invite> INVITES = new ArrayList<>();
+    public static final HashMap<UUID, Set<Invite>> INVITES = new HashMap<>();
 
     @Override
     public void handleWithPermission(Player player, User user, String[] arguments) {
+        Chatter chatter = new Chatter(player);
         if (arguments.length < 2) {
-            ChatUtils.send(player, ChatUtils.format("&b/guild invite &e<&6Player&e> &8- &7Invite a player to join your Guild."));
+            chatter.sendP("&b/guild invite &e<&6Player&e> &8- &7Invite a player to join your Guild.");
         } else {
             OfflinePlayer invitePlayer = Bukkit.getOfflinePlayer(arguments[1]);
             Guild guild = user.getGuild();
             if (guild.getLevel().getMaxMembers() > guild.getMembers().size()) {
                 if (invitePlayer.isOnline() || invitePlayer.hasPlayedBefore()) {
                     if (Guilds.getGuild(invitePlayer.getPlayer()).isPresent()) {
-                        ChatUtils.send(player, ChatUtils.format("&3That player is already part of a Guild."));
+                        chatter.error("That player is already part of a Guild.");
                         return;
                     }
-                    INVITES.add(new Invite(guild, new User(invitePlayer.getName(), invitePlayer.getUniqueId(), DefaultRoles.MEMBER)));
-                    ChatUtils.send(player, ChatUtils.format("&3Sent invite to &6" + invitePlayer.getName()));
-                    if (invitePlayer.isOnline()) {
-                        ChatUtils.send(invitePlayer.getPlayer(), ChatUtils.format("&b" + player.getName() + " &3has invited you to &6" + guild.getGuildName()));
-                        ChatUtils.send(invitePlayer.getPlayer(), ChatUtils.format("&3Use &b/guild join &e<&6Guild&e> &3to accept the invitation."));
+                    INVITES.putIfAbsent(invitePlayer.getUniqueId(), new HashSet<>());
+                    INVITES.get(invitePlayer.getUniqueId()).add(new Invite(guild, invitePlayer.getUniqueId()));
+                    chatter.sendP("&3Sent invite to &6" + invitePlayer.getName());
+                    if (invitePlayer.isOnline() && invitePlayer.getPlayer() != null) {
+                        Chatter.sendP(invitePlayer.getPlayer(),"&b" + player.getName() + " &3has invited you to &6" + guild.getGuildName());
+                        Chatter.send(invitePlayer.getPlayer(), "&3Use &b/guild join &3to accept the invitation.");
                     }
                 } else {
-                    ChatUtils.send(player, ChatUtils.format("&3No player exists by that name."));
+                    chatter.error("&3No player exists by that name.");
                 }
             } else {
-                ChatUtils.send(player, ChatUtils.format("&7Your guild does not have any more player slots. Level up to increase the number of available slots."));
+                chatter.error("&7Your guild does not have any more player slots. Level up to increase the number of available slots.");
             }
         }
     }
@@ -58,11 +58,11 @@ public class GuildInviteCommandHandler extends GuildMemberPermissionCommandHandl
 
     @Override
     public List<String> getKeywords() {
-        return Arrays.asList("invite");
+        return List.of("invite");
     }
 
     @Override
-    public String describe() {
+    public @NotNull String describe() {
         return "&b/guild invite &e<&6Player&e> &8- &7Invite a player to join your Guild.";
     }
 }
